
	svystat,svrepstat objects lose their variance attribute and class on
	math operations so the standard errors don't end up misleading. Use
	svycontrast() to get transformed versions with SEs
	(for Pavel Krivitsky)

	The $aic component of svyglm objects, which is undocumented and meaningless,
	is now set to NA. If this breaks your code, your code was already wrong.
	(for Michael Reiss)
	

4.4-3	options(survey.lonely.psu="adjust") needed strata to be a factor or numeric
	(for Richard Li, Durga Nagori)

	Initial version of multiframe() for dual-frame sampling and
	reweight() for optimising frame weights. Methods for svytotal,
	svymean, svyglm, svyvar, svychisq, update, subset

	Initial version of withCrossval() for cross-validation

	withPV with action=fun and rewrite=TRUE wasn't working

	add "pps_spec" virtual class for all the PPS sparse matrix things

	support calibration to the influence functions of a phase-1 model in calibrate.twophase and
	calibrate.twophase2 (currently only with simple random sampling at phase 1)

	added svychisq.twophase2 (for Yilin Zhang)

	twophase2 objects now print the call that created them better

	?svystat and ?svrepstat now point to ?surveysummary, which describes the structure
	(for Terry Therneau)

	predict.svyglm will impute zero for NA coefficients (Terry Therneau).

	With se.fit=FALSE, predict.svyglm returns a numeric vector rather than a
	svystat object


4.4-2	Invalid read in C++ code, found by Brian Ripley, fixed by Ben Schneider

	Updated small-area vignette (Peter Gao)

4.4-1   CRAN

4.4	Fixes to calibration for PPS sampling

	A PPS variance matrix can now be specified as phase two of a two-phase design.
	This includes poisson_sampling() as a model for non-response (for Pam Shaw, Jasper Yang)

	svysmoothUnit() and svysmoothArea() as an interface to the SUMMER package for small-area
	estimation (Peter Gao, Jon Wakefield, Richard Li)

4.3	Added Ben Schneider's C++ code for multistage variances. It is currently controlled